tests/netgen/grid/errors/grid_x_number__zero/errors.netgen
Error: The number of nodes must be positive and at least 2 in one direction.
Quitting (on error).
